<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7FFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile.UpdateProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="77dp"
                    android:layout_height="81dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:id="@+id/pfp"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_baseline_person_24"
                        android:scaleType="fitXY" />
                </androidx.cardview.widget.CardView>
                <ImageView
                    android:id="@+id/editpfp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="110dp"
                    android:background="@drawable/ic_baseline_edit_24"/>
            </LinearLayout>

            <Button
                android:id="@+id/savepfp"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:text="Save Picture"
                android:textSize="10dp"
                android:visibility="invisible"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current Name : "
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"/>
            <TextView
                android:id="@+id/currentname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"/>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/UsernameUpdateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:helperTextTextColor="#FF0000"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UsernameUpdateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ConfirmUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="Save Change Name"
            tools:ignore="InvalidId" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:text=" Deskripsi Profile    :"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:helperTextTextColor="#FF0000"
            app:counterEnabled="true"
            app:counterMaxLength="10000"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/deskripsiprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10000"
            /></com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ConfirmDeskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="Save Change"
            tools:ignore="InvalidId" />

    </LinearLayout>

</FrameLayout>